dev/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: gamecloud-api-gateway
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                # Delay SIGTERM signal to Pod, so that K8s has enough time to inform other components. To ensure that e.g. the
                # service registry is updated, no requests are forward to the terminating pod anymore due to race condition.
                command: [ "sh", "-c", "sleep 3" ]
          ports:
            - containerPort: 9000
